protocols/tests/snapshots/protocols__serialize__tests__add_d1.snap
---
source: protocols/src/serialize.rs
expression: content
---
struct Adder {
  in a: u32,
  in b: u32,
  out s: u32,
}

fn add<DUT: Adder>(a: u32, b: u32, s: u32) {
  DUT.a := a;
  DUT.b := b;
  step();
  DUT.a := X;
  DUT.b := X;
  assert_eq(s, DUT.s);
  fork();
  step();
}

fn add_fork_early<DUT: Adder>(a: u32, b: u32, s: u32) {
  DUT.a := a;
  DUT.b := b;
  step();
  fork();
  DUT.a := X;
  DUT.b := X;
  assert_eq(s, DUT.s);
  step();
}

fn add_doesnt_end_in_step<DUT: Adder>(a: u32, b: u32, s: u32) {
  DUT.a := a;
  DUT.b := b;
  step();
  DUT.a := X;
  DUT.b := X;
  assert_eq(s, DUT.s);
  fork();
}

fn add_incorrect<DUT: Adder>(a: u32, b: u32, s: u32) {
  DUT.a := a;
  DUT.b := b;
  step();
  DUT.a := a;
  DUT.b := b;
  assert_eq(s, DUT.s);
  fork();
  step();
}

fn add_incorrect_implicit<DUT: Adder>(a: u32, b: u32, s: u32) {
  DUT.a := a;
  DUT.b := b;
  step();
  assert_eq(s, DUT.s);
  fork();
  step();
}

fn wait_and_add<DUT: Adder>(a: u32, b: u32, s: u32) {
  step();
  fork();
  step();
  DUT.a := a;
  DUT.b := b;
  step();
  assert_eq(s, DUT.s);
  step();
}
