protocols/tests/snapshots/protocols__serialize__tests__mul_ignore.snap
---
source: protocols/src/serialize.rs
expression: content
---
struct Multiplier {
  in a: u32,
  in b: u32,
  out s: u32,
}

fn mul<dut: Multiplier>(a: u32, b: u32, s: u32) {
  dut.a := a;
  dut.b := b;
  step();
  step();
  fork();
  dut.a := X;
  dut.b := X;
  step();
  s := dut.s;
}

fn ignore<dut: Multiplier>(a: u32, b: u32, s: u32) {
  dut.a := a;
  dut.b := b;
  step();
  step();
  fork();
  dut.a := X;
  dut.b := X;
  step();
  s := dut.s;
}
