protocols/tests/snapshots/protocols__serialize__tests__nested_bounded_loop.snap
---
source: protocols/src/serialize.rs
expression: content
---
struct Adder {
  in a: u32,
  in b: u32,
  out s: u32,
}

fn nested_busy_wait<DUT: Adder>(a: u32, b: u32, outer_iters: uint, inner_iters: uint, s: u32) {
  DUT.a := a;
  DUT.b := b;
  repeat outer_iters iterations {
    repeat inner_iters iterations {
      step();
      assert_eq(s, DUT.s);
    }
    step();
    assert_eq(s, DUT.s);
  }
  DUT.a := X;
  DUT.b := X;
  assert_eq(s, DUT.s);
  fork();
  step();
}
