protocols/tests/snapshots/protocols__serialize__tests__simple_bounded_loop.snap
---
source: protocols/src/serialize.rs
expression: content
---
struct Counter {
  in a: u64,
  out s: u64,
}

fn simple_bounded_loop<dut: Counter>(a: u64, num_iterations: uint, s: u64) {
  dut.a := a;
  repeat num_iterations iterations {
    step();
  }
  assert_eq(dut.s, s);
}
