protocols/tests/snapshots/protocols__serialize__tests__simple_for.snap
---
source: protocols/src/serialize.rs
assertion_line: 373
expression: content
---
struct Counter {
  in a: u64,
  out s: u64,
}

fn simple_for<dut: Counter>(in a: u64, in iters: u8, out s: u64) {
  dut.a := a;
  for iters iterations {
    step();
  }
  assert_eq(dut.s, s);
}
